fixed scrollbar bug, made icons great again

--- a/charlie/src/app/shared/components/embedded-stop-overview/embedded-stop-overview.component.css
+++ b/charlie/src/app/shared/components/embedded-stop-overview/embedded-stop-overview.component.css
@@ -2,6 +2,10 @@
   opacity: 0.0;
 }
 
+.invisible-text app-state-icon {
+  opacity: 0.0;
+}
+
 p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.3rem;
 }
